src/App.css
body {
  background-color: white;
}
ul {
  list-style-type: square;
}
.fixed-top {
  width: 100%;
}
.logotagline {
  font-family: 'Coming Soon', cursive;
  color: var(--primary);
  font-size: 1rem;
  margin-bottom: 0px;
}
.logotitle {
  font-family: 'league_spartanbold', sans-serif;
  color: var(--dark);
  font-size: 1.25rem;
  margin-bottom: 0px;
}
.navLogoTop {
  width: 380px;
}
.navLogoBottom {
  width: 260px;
}
.navbar-brand {
  padding: 5px 0px;
  margin: 0px;
}
.navbar-brand a:hover {
  text-decoration: none;
}
.navbar-toggler {
  margin: 0px;
}
.logoyellow {
  color: var(--warning);
}

.card {
  margin-bottom: 30px;
}
.marginfornav {
  margin-top: 99px;
  min-height: 90vh;
}
.max800 {
  width: 100vw;
}
.paddingAround {
  padding: 30px;
}

main {
  background-color: white;
}
main h1 {
  font-size: 1.9rem;
}
main h2 {
  font-size: 1.7rem;
}
main h3 {
  font-size: 1.5rem;
}
main h4 {
  font-size: 1.3rem;
}
main h5 {
  font-size: 1.1rem;
}
main h6 {
  font-size: 0.9rem;
}
.pageTitle {
  font-family: 'league_spartanbold', sans-serif;
  padding: 10px 0px 20px 0px;
}
.pageTitleOnDark {
  font-family: 'league_spartanbold', sans-serif;
  margin: 10px 0px;
  color: white;
}
.pageTitleHomepage {
  font-family: 'Coming Soon', cursive;
  margin: 10px 0px;
}
.logoIcon {
  margin: 0px 10px 2px 10px;
}
.eyeIcon {
  color: var(--success);
}
.userIcon {
  color: var(--warning);
}
.brainIcon {
  color: var(--danger);
}
.topNav {
  padding: 8px 16px 8px 16px;
  margin: 0px;
}
.topNavLink {
  color: white;
  padding: 0px 15px;
}
.topNavLink:hover {
  text-decoration: none;
  color: var(--primary);
}

.navbar-light .navbar-nav .nav-link.active {
  color: var(--primary);
  font-weight: bold;
}
.navbar-light .navbar-nav .nav-link {
  color: var(--dark);
}
.navbar-light .nav-item a.nav-link:hover,
.navbar-light .nav-item a.nav-link:focus {
  color: var(--primary);
}
.navbar-light .nav-item a.nav-link:active {
  color: var(--primary);
}
.nav-fill .nav-item {
  text-align: left;
}
.navbar-light .dropdown-item a.nav-link {
  color: var(--dark);
}
.navbar-light .dropdown-item:hover {
  background-color: white;
}
.navbar-light .dropdown-menu {
  background-color: white;
}
.bottomNav {
  overflow-y: scroll;
  max-height: 408px;
  padding: 4px 16px;
  margin: 0px;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.05),
    0 -0.1rem 0.25rem rgba(0, 0, 0, 0.03), inset 0 -1px 0 rgba(0, 0, 0, 0.1),
    inset 0 1px 0 rgba(0, 0, 0, 0.1);
}

footer {
  width: 100%;
  margin: 0px;
  padding: 0px 0px 0px 0px;
  background-color: var(--dark);
  color: var(--light);
}
.footerBtn {
  background-color: var(--light);
}
.footerBtn:hover {
  color: var(-light);
  border-color: var(--light);
}
.footerRow {
  padding: 0px 30px;
  margin: 0px;
}
.footerBottomSection {
  padding: 0px 30px;
}
.footerlocation {
  color: var(--primary);
}
.footerMapCol {
  padding: 0px;
}
.footerIcon,
.navIcon {
  margin-right: 3px;
}
.footerLinkDiv {
  margin-bottom: 15px;
}
.footerLink {
  color: white;
}
.footerLink:hover {
  padding: 5px 0px;
  color: var(--primary);
}
.footerLinkIcon {
  margin-right: 5px;
}
.footerCol,
.footerCol3,
.footerCol2,
.footerCol1 {
  padding: 15px 0px;
  margin: 0px;
  text-align: center;
}
a .socialIcon {
  color: var(--light);
}
a .socialIcon:hover {
  color: var(--primary);
}
.socialIconLeftPadding {
  margin: 0px 0px 0px 10px;
}
.socialRow {
  text-align: center;
}
.copyRow {
  text-align: center;
}

.coverPhoto {
  width: 100vw;
  height: auto;
}
.hours {
  font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
}
.form {
  max-width: 600px;
}
.apptcheckbox {
  padding-left: 15px;
}
.textShadow {
  text-shadow: 1px 1px 2px #000000;
}
.homeLinksButtonLight:hover {
  color: var(--light);
  border-color: var(--light);
  background-color: var(--primary);
}
.homeLinksButtonLight {
  color: var(--primary);
  background-color: var(--light);
}
.homeLinksButtonPrimary:hover,
.formBtn:hover {
  color: var(--primary);
  border-color: var(--primary);
  background-color: var(--light);
}
.homeLinksButtonPrimary,
.formBtn {
  color: var(--light);
  background-color: var(--primary);
}
.homeLinkPrimary {
  color: var(--primary);
}
.homeLinkPrimary:hover {
  color: var(--primary);
  text-decoration: none;
}
.shrinkingButton {
  padding: 4px 8px;
  font-size: 1rem;
}
.videoTitle {
  font-size: 1.8rem;
  font-weight: 600;
  padding: 0px;
}
.videoSubtitle {
  font-size: 1rem;
  margin-bottom: 7px;
  font-weight: 400;
  padding: 0px;
}
.videoContainer {
  position: relative;
  overflow: hidden;
  background-color: black;
  width: 100%;
  padding-top: 52%;
}
.videoContainer .container {
  position: absolute;
  z-index: 1;
  bottom: 10%;
  margin: 0px;
  max-width: 90vw;
  border-radius: 10px;
  padding: 0px;
}

@keyframes fadeincontainer {
  0% {
    background: rgba(0, 0, 0, 0);
  }
  100% {
    background: rgba(0, 0, 0, 0.6);
    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
  }
}
.videoContainer .container {
  background: rgba(0, 0, 0, 0);
  animation-name: fadeincontainer;
  animation-timing-function: ease-in;
  animation-iteration-count: 1;
  animation-duration: 2s;
  animation-delay: 4s;
  animation-play-state: running;
  animation-fill-mode: forwards;
}
@keyframes fadein {
  /* declare animation actions here */
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.videoTitleFadeIn {
  opacity: 0;
  animation-name: fadein;
  animation-timing-function: ease-in;
  animation-iteration-count: 1;
  animation-duration: 2s;
  animation-delay: 6s;
  animation-play-state: running;
  animation-fill-mode: forwards;
}
.videoSubtitleFadeIn {
  margin-bottom: 15px;
  opacity: 0;
  animation-name: fadein;
  animation-timing-function: ease-in;
  animation-iteration-count: 1;
  animation-duration: 2s;
  animation-delay: 8s;
  animation-play-state: running;
  animation-fill-mode: forwards;
}

.videoContainer video {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100vw;
}
/* ... */

